<resources>
    <string name="app_name">Notepad</string>

    <!-- alert_note -->
    <string name="create_new_note">Create new note</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>

    <!-- view_single_note -->
    <string name="example_title">Example title lorem ipsu skrzy</string>
    <string name="example_date">Last edit: 3 Jan 2019, 21:37:54</string>

    <!-- activity_note -->
    <string name="edit_title_text">Title</string>
    <string name="edit_note_text">Note</string>


    <!-- activity_note -->
    <string name="delete_note">Delete note</string>
    <string name="sure">Are you sure?</string>
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>

    <!-- menu -->
    <string name="menu_save_icon">Save</string>
    <string name="menu_share_string">Share</string>
    <string name="menu_delete_string">Delete</string>
    <string name="menu_back_string">Cofnij zmiany</string>
    <string name="menu_night_mode_string">Night mode</string>

</resources>
