<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.notepad.MainActivity">

    <item
        android:id="@+id/menu_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_save_icon"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete_string"
        android:orderInCategory="100"
        app:showAsAction="never" />


    <item
        android:id="@+id/menu_back"
        android:title="@string/menu_back_string"
        android:orderInCategory="100"
        app:showAsAction="never" />


    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share_string"
        android:orderInCategory="100"
        app:showAsAction="never" />


    <item
        android:id="@+id/menu_night_mode"
        android:title="@string/menu_night_mode_string"
        android:orderInCategory="100"
        android:checkable="true"
        android:checked="false"
        app:showAsAction="never" />


</menu>
