<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background_alert_color"
    android:layout_margin="10dp">

     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_gravity="center"
     android:layout_marginBottom="10dp"
     android:layout_marginTop="13dp">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="25sp"
              android:textColor="@color/text_color"
              android:text="@string/delete_note"
              android:layout_marginBottom="3dp"
              android:paddingLeft="13dp"
              android:layout_gravity="left" />

          <View
              android:layout_width="match_parent"
              android:layout_height="2dp"
              android:layout_marginTop="2dp"
              android:layout_marginBottom="6dp"
              android:background="@color/text_color">
          </View>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="23sp"
              android:textColor="@color/text_color"
              android:text="@string/sure"
              android:layout_marginTop="6dp"
              android:layout_marginBottom="6dp"
              android:layout_gravity="center" />

     </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_no"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:background="@color/cancel_btn_color"
            android:layout_marginRight="20dp" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_yes"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:background="@color/save_btn_color"
            android:layout_marginLeft="20dp" />


    </LinearLayout>

</LinearLayout>