<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background_alert_color"
    android:layout_margin="30dp">

    <TextView
        android:id="@+id/text_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_note"
        android:textSize="23sp"
        android:textColor="@color/textColor"
        android:padding="9dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColor">
    </View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

             <EditText
                 android:id="@+id/edit_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Title"
                 android:maxLength="25"
                 android:maxLines="3"
                 android:layout_marginRight="30dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp" />

             <EditText
                 android:id="@+id/edit_note"
                 android:layout_width="match_parent"
                 android:maxLines="15"
                 android:layout_height="wrap_content"
                 android:hint="Note"
                 android:layout_marginRight="30dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginBottom="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:background="@color/cancel_btn_color"
            android:layout_marginRight="20dp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:background="@color/save_btn_color"
            android:layout_marginLeft="20dp" />


    </LinearLayout>



</LinearLayout>